--- a/css/styles.css
+++ b/css/styles.css
@@ -136,7 +136,9 @@ img {
   display: flex;
   flex-direction: column;
   align-items: center;
-  /*    */
+  transition-property: color, transform;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .logo-link:focus,
@@ -144,27 +146,19 @@ img {
   color: #4d5ae5;
 }
 
-/*  */
-/* :active */
-.logo-link:active::after{
-content: "";
-color: #4d5ae5;
-width: 100%;
-overflow-block: visible;
-height: 4px;
-background-color: #4d5ae5;
-border-radius: 2px;
-}
-
-
+/* .logo-link:active::after{ */
+/* content: ""; */
+/* color: #4d5ae5; */
+/* width: 100%; */
+/* height: 4px; */
+/* background-color: #4d5ae5; */
+/* border-radius: 2px; */
 /* } */
 /*  */
-.logo-link:hover {
-  color: #4d5ae5;
-}
 
 .logo-link:active {
   color: #4d5ae5;
+  transform: scale(0.8);
 }
 
 .address {
@@ -187,6 +181,9 @@ border-radius: 2px;
   letter-spacing: 0.02em;
   color: #434455;
   text-decoration: none;
+  transition-property: color, transform;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .address-link:hover {
@@ -194,6 +191,11 @@ border-radius: 2px;
 }
 .address-link:focus {
   color: #404bbf;
+}
+
+.address-link:active {
+  color: #404bbf;
+  transform: scale(0.8);
 }
 
 /* Hero */
@@ -235,6 +237,10 @@ border-radius: 2px;
   letter-spacing: 0.04em;
   color: #ffffff;
   border: none;
+  /* transform: scale(1) */
+  transition-property: background-color, box-shadow, transform;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hero-bnt-cont {
@@ -245,8 +251,10 @@ border-radius: 2px;
 
 .hero-bnt:hover,
 .hero-bnt:focus {
+  /* background-color: #404bbf; */
   background-color: #404bbf;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  transform: scale(1.5);
 }
 
 .hero-bnt:active {
@@ -394,8 +402,13 @@ border-radius: 2px;
 .team-social-link:hover,
 .team-social-link:focus {
   background-color: #404bbf;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
+.team-social-link:active {
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  transform: scale(0.8);
+}
 .team-social-link {
   width: 100%;
   height: 100%;
@@ -406,6 +419,9 @@ border-radius: 2px;
   justify-content: center;
   align-items: center;
   display: flex;
+  transition-property: transform, box-shadow;
+  transition-duration: 250ms;
+  transition-timing-function: linear;
 }
 
 .team-social-icon {
@@ -457,9 +473,26 @@ border-radius: 2px;
   fill: #8e8f99;
 }
 
+@keyframes rotator {
+  0% {
+    transform: rotateY(0deg);
+    fill: #8e8f99;
+  }
+
+  100% {
+    transform: rotateY(360deg);
+    fill: #404bbf;
+  }
+}
+
 .customers-link:hover,
 .customers-link:focus {
   border: 1px solid #404bbf;
+  animation-name: rotator;
+  animation-duration: 2000ms;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
 .customers-link:hover,
