--- a/css/styles.css
+++ b/css/styles.css
@@ -159,6 +159,7 @@ img {
 .logo-link:active {
   color: #4d5ae5;
   transform: scale(0.8);
+  
 }
 
 .address {
@@ -251,10 +252,10 @@ img {
 
 .hero-bnt:hover,
 .hero-bnt:focus {
-  /* background-color: #404bbf; */
+
   background-color: #404bbf;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  transform: scale(1.5);
+  transform: scale(1.2);
 }
 
 .hero-bnt:active {
@@ -419,9 +420,9 @@ img {
   justify-content: center;
   align-items: center;
   display: flex;
-  transition-property: transform, box-shadow;
+  transition-property: transform, box-shadow, background-color;
   transition-duration: 250ms;
-  transition-timing-function: linear;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .team-social-icon {
@@ -485,12 +486,14 @@ img {
   }
 }
 
-.customers-link:hover,
-.customers-link:focus {
+.customers-box:hover,
+.customers-box:focus 
+.customers-link {
   border: 1px solid #404bbf;
+  border-radius: 4px;
   animation-name: rotator;
-  animation-duration: 2000ms;
-  animation-timing-function: linear;
+  animation-duration: 4000ms;
+  animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   animation-iteration-count: infinite;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
@@ -572,8 +575,17 @@ img {
 .footer-social-link:hover,
 .footer-social-link:focus {
   background-color: #31d0aa;
+  
+
 }
 
+.footer-social-link:active{
+  transform: scale(0.8);
+box-shadow: rgb(28, 221, 64) 0px 20px 30px -10px;
+
+
+
+}
 .footer-social-link {
   width: 100%;
   height: 100%;
@@ -583,6 +595,12 @@ img {
   justify-content: center;
   align-items: center;
   margin-top: 16px;
+  transition-property: transform, 
+box-shadow, background-color;
+transition-duration: 250ms;
+transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+transform: scale(1);
+
 }
 .footer-social-icon {
   fill: #f4f4fd;
