--- a/css/styles.css
+++ b/css/styles.css
@@ -126,6 +126,20 @@ img {
   gap: 40px;
 }
 
+.curent {
+  position: relative;
+}
+.curent::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 4px;
+  border-radius: 2px;
+  background-color: #404bbf;
+  left: 0;
+  bottom: -24px;
+}
+
 .logo-link {
   font-weight: 500;
   font-size: 16px;
@@ -146,20 +160,9 @@ img {
   color: #4d5ae5;
 }
 
-/* .logo-link:active::after{ */
-/* content: ""; */
-/* color: #4d5ae5; */
-/* width: 100%; */
-/* height: 4px; */
-/* background-color: #4d5ae5; */
-/* border-radius: 2px; */
-/* } */
-/*  */
-
 .logo-link:active {
   color: #4d5ae5;
   transform: scale(0.8);
-  
 }
 
 .address {
@@ -252,7 +255,6 @@ img {
 
 .hero-bnt:hover,
 .hero-bnt:focus {
-
   background-color: #404bbf;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   transform: scale(1.2);
@@ -487,8 +489,7 @@ img {
 }
 
 .customers-box:hover,
-.customers-box:focus 
-.customers-link {
+.customers-box:focus .customers-link {
   border: 1px solid #404bbf;
   border-radius: 4px;
   animation-name: rotator;
@@ -575,16 +576,13 @@ img {
 .footer-social-link:hover,
 .footer-social-link:focus {
   background-color: #31d0aa;
-  
-
+  box-shadow: rgba(24, 136, 48, 0.16) 0px 3px 6px,
+    rgba(21, 153, 76, 0.23) 0px 3px 6px;
 }
 
-.footer-social-link:active{
+.footer-social-link:active {
   transform: scale(0.8);
-box-shadow: rgb(28, 221, 64) 0px 20px 30px -10px;
-
-
-
+  box-shadow: rgb(28, 221, 64) 0px 20px 30px -10px;
 }
 .footer-social-link {
   width: 100%;
@@ -595,12 +593,10 @@ box-shadow: rgb(28, 221, 64) 0px 20px 30px -10px;
   justify-content: center;
   align-items: center;
   margin-top: 16px;
-  transition-property: transform, 
-box-shadow, background-color;
-transition-duration: 250ms;
-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-transform: scale(1);
-
+  transition-property: transform, box-shadow, background-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transform: scale(1);
 }
 .footer-social-icon {
   fill: #f4f4fd;
@@ -621,7 +617,6 @@ transform: scale(1);
 }
 /* Poryfolio */ /* Poryfolio */ /* Poryfolio */
 
-/* all */
 .Portf-list {
   list-style-type: none;
 }
@@ -647,14 +642,22 @@ transform: scale(1);
   color: #ffffff;
   text-decoration: none;
   transition-duration: 250ms;
-  box-shadow:none;
-  /* transition-property: background-color, */
-/* box-shadow; */
-  /* transition-duration: 250ms, 250ms, 250ms; */
-  /* transition-timing-function: cubic-bezier(0. */
-/* 4, 0, 0.2, 1), cubic-bezier(0.4, 0, 0.2,  */
-/* 1), cubic-bezier(0.4, 0, 0.2, 1) ; */
+  box-shadow: none;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  transition-property: background-color, box-shadow, transform;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
 
+.all:hover,
+.all:focus {
+  background-color: #404bbf;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+}
+
+.all:active {
+  transform: scale(0.8);
 }
 
 .other-all {
@@ -669,35 +672,23 @@ transform: scale(1);
   color: #4d5ae5;
   background-color: #f4f4fd;
   text-decoration: none;
-  transition-property: transform, background-color, color, box-shadow;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  transition-property: background-color, box-shadow, transform;
   transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.all:hover
-{
-  /* transform: scale(0.5); */
-  background-color: #404bbf;
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.
-1), 0px 2px 1px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
-
-
-
+  transition-timing-function: cubic-bezier(0 4, 0, 0.2, 1);
 }
 
 .other-all:hover,
 .other-all:focus {
-  transform: scale(0.9);
   background-color: #4d5ae5;
   color: #ffffff;
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.
-1), 0px 2px 1px rgba(0, 0, 0, 0.08),
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 .other-all:active {
   background-color: #404bbf;
   color: #ffffff;
+  transform: scale(0.8);
 }
 
 .portfolio {
@@ -720,28 +711,6 @@ transform: scale(1);
   border: none;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 .hero-portfolio-cont {
   display: flex;
   flex-wrap: wrap;
@@ -752,26 +721,19 @@ transform: scale(1);
 .portfolio-list-items {
   outline-color: #e7e9fc;
   cursor: pointer;
-}
-
-
-.portfolio-list-items:hover
-.portfolio-top-text{
-  transform: translateY(0);
-  transition-property: transform;
-  transition-duration:  250ms;
+  transition-property: box-shadow;
+  transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.portfolio-list-items:hover,
-.portfolio-list-items:active {
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 
-0.08),
-    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 
-2px 1px rgba(46, 47, 66, 0.08);
-transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+.portfolio-list-items:hover .portfolio-top-text {
+  transform: translateY(0);
 }
 
+.portfolio-list-items:hover {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
 
 .list-items-text-cont {
   padding-top: 32px;
@@ -781,39 +743,115 @@ transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   border-width: 0px 1px 1px 1px;
   border-color: #e7e9fc;
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08);
-
 }
 
 .portfolio-img {
 }
 
 .portfolio-top-wrap {
-position: relative;
-overflow: hidden;
-  }
+  position: relative;
+  overflow: hidden;
+}
 
-.portfolio-top-text{
-font-family: 'Roboto';
-font-style: normal;
-font-weight: 400;
-font-size: 16px;
-line-height: 1.5;
-letter-spacing: 0.02em;
-color:#F4F4FD;
-position: absolute;
-top: 0px;
-background-color: #4d5ae5d8;
-padding: 40px;
-height: 100%;
-overflow: auto;
-transform: translateY(100%);
-transition-duration:  250ms;
+.portfolio-top-text {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #f4f4fd;
+  position: absolute;
+  top: 0px;
+  background-color: #4d5ae5d8;
+  padding: 40px;
+  height: 100%;
+  overflow: auto;
+  transition-property: transform;
+  transform: translateY(100%);
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+/* Modal */ /* Modal */ /* Modal */ /* Modal */
+
+.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(46, 47, 66, 0.4);
+  transition-property: opacity, visibility, transform; 
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.backdrop .is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+  visibility: hidden;
+}
+
+.backdrop.is-hidden .modal{
+  transform: translate(-50%, -50%) scale(0);
 
 }
 
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(1);
+  width: 408px;
+  min-height: 576px;
+  background-color: #fcfcfc;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  padding: 24px;
+  transition-property: transform;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1) ;
+}
 
+.modal-close {
+  width: 24px;
+  height: 24px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  background-color: #e7e9fc;
+  display: block;
+  margin-left: auto;
+  transition-property: background-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
 
+.modal-close:hover{
+background-color: #f4f4fc;
 
+}
 
+.modal-close:active{
+  background-color: #404BBF;
+  border-radius: 50%;
+}
 
+.modal-icon-cross {
+  width: 100%;
+  height: 100%;
+  transition-property: fill;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
 
+.modal-icon-cross:active{
+  fill:#FFFFFF;
+}
