--- a/css/styles.css
+++ b/css/styles.css
@@ -615,6 +615,65 @@ img {
   align-items: center;
   gap: 16px;
 }
+
+.footer-sub{
+margin-left: 80px;
+
+
+}
+
+.sub-text{
+
+}
+
+.footer-sub-menu{
+  display: flex;
+  margin-top: 16px;
+  
+
+}
+
+.footer-input{
+height: 40px;
+width: 100%;
+margin-right: 24px;
+background:#2E2F42;
+color: rgba(255, 255, 255, 0.6);
+border: 1px solid rgba(255, 255, 
+255, 0.3);
+filter: drop-shadow(0px 4px 4px rgba
+(0, 0, 0, 0.15));
+border-radius: 4px;
+
+}
+
+.footer-input::placeholder{
+padding-left: 16px;
+font-weight: 400;
+font-size: 12px;
+line-height: 2.0;
+display: flex;
+align-items: center;
+letter-spacing: 0.04em;
+
+}
+
+.footer-btn{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 8px 24px;
+  gap: 16px;
+  background: #4D5AE5;
+  border-radius: 4px;
+  border: none;
+  fill: #FFFFFF;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  color: #FFFFFF;
+
+}
 /* Poryfolio */ /* Poryfolio */ /* Poryfolio */
 
 .Portf-list {
